# llama.android

./: .geminiignore  .gitignore  AI_Research.md  CHANGELOG.md  DEVELOPMENT.md  LICENSE  README.md  TODO.md  codemagic.yaml  gradle.properties  jitpack.yml  jitpack_rustup.sh  settings.gradle.kts
.gemini/: GEMINI.md
.gemini/conductor/: index.md  product-guidelines.md  product.md  tech-stack.md  tracks.md  workflow.md
.gemini/conductor/tracks/fast-compile/: index.md  metadata.json  plan.md  spec.md
.gemini/conductor/tracks/init/: metadata.json  plan.md  spec.md
.gemini/conductor/tracks/refactor/: index.md  metadata.json  plan.md  spec.md
.github/workflows/: android.yml
docs/: rust_build.md
gradle/: libs.versions.toml
llama-android-core/: .gitignore  CMakefile.md  build.gradle.kts
llama-android-core/ai_coding_assistant/: Json_generation.md  embeddings.md  lora.md  perplexity.md  sampling_parameters.md
llama-android-core/src/androidTest/java/android/llama/cpp/: ExampleInstrumentedTest.kt
llama-android-core/src/androidTest/java/net/amazingapps/llama/android/core/: EngineRule.kt  ExampleInstrumentedTest.kt  InferenceEngineTest.kt
llama-android-core/src/androidTest/java/net/amazingapps/llama/android/core/guidance/: ContentFilteringTest.kt  GbnfGrammarTest.kt  LLGuidanceGrammarTest.kt  ZeroShotClassificationSocialMediaTest.kt  ZeroShotClassificationTest.kt
llama-android-core/src/main/cpp/: CMakeLists.txt  ai_chat.cpp  cargo-hijack.sh  gbnf_grammar.cpp
llama-android-core/src/main/java/com/arm/aichat/: InferenceEngine.kt
llama-android-core/src/main/java/com/arm/aichat/internal/: InferenceEngineImpl.kt
llama-android-core/src/main/java/net/amazingapps/llama/android/core/: AiChat.kt  InferenceEngine.kt
llama-android-core/src/main/java/net/amazingapps/llama/android/core/gguf/: FileType.kt  GgufMetadata.kt  GgufMetadataReader.kt
llama-android-core/src/main/java/net/amazingapps/llama/android/core/guidance/: GbnfGrammar.kt  IGrammar.kt  LlGuidanceGrammar.kt
llama-android-core/src/main/java/net/amazingapps/llama/android/core/internal/: InferenceEngineImpl.kt
llama-android-core/src/main/java/net/amazingapps/llama/android/core/internal/gguf/: GgufMetadataReaderImpl.kt
llama.android/: build.gradle.kts
llama.android/src/main/java/com/arm/aichat/internal/: InferenceEngineImpl.kt
sample-app/: build.gradle.kts  proguard-rules.pro
sample-app/src/main/: AndroidManifest.xml
sample-app/src/main/java/com/example/llama/: MainActivity.kt  MessageAdapter.kt  ModelDownloader.kt
sample-app/src/main/java/net/amazingapps/llama/android/sample/app/: AppModule.kt  LlamaAndroidApp.kt  MainActivity.kt  MainUiState.kt  MainViewModel.kt
sample-app/src/main/java/net/amazingapps/llama/android/sample/app/repository/: ModelDownloader.kt
sample-app/src/main/java/net/amazingapps/llama/android/sample/app/ui/: ChatSection.kt  MainScreen.kt  ModelStateSection.kt
sample-app/src/main/java/net/amazingapps/llama_android/sample/app/: AppModule.kt  LlamaAndroidApp.kt  MainActivity.kt  MainUiState.kt  MainViewModel.kt
sample-app/src/main/java/net/amazingapps/llama_android/sample/app/repository/: ModelDownloader.kt
sample-app/src/main/java/net/amazingapps/llama_android/sample/app/ui/: ChatSection.kt  MainScreen.kt  ModelStateSection.kt
sample-app/src/main/res/drawable/: bg_user_message.xml  outline_folder_open_24.xml
sample-app/src/main/res/mipmap/: ic_launcher.xml
sample-app/src/main/res/values/: strings.xml
